// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macro with attachCreators: with attachCreators 1`] = `

import { status } from "patronum/status";
const $status = status({ effect });

      ↓ ↓ ↓ ↓ ↓ ↓

var _effectorFileName = '/macro.test.ts';
import { status } from 'patronum/status';
const $status = status({
  ɔ: {
    effect,
  },
  config: {
    loc: {
      file: _effectorFileName,
      line: 2,
      column: 16,
    },
    name: '$status',
    sid: 'j4rpgh',
  },
});


`;

exports[`macro with fabrics and root import: with fabrics and root import 1`] = `

import { status } from "patronum";
const $status = status({ effect });

      ↓ ↓ ↓ ↓ ↓ ↓

var _effectorFileName = '/macro.test.ts';
import { withFactory } from 'effector';
import { status } from 'patronum';
const $status = withFactory({
  sid: 'j4rpgh',
  fn: () =>
    status({
      effect,
    }),
  name: '$status',
  method: 'status',
  loc: {
    file: _effectorFileName,
    line: 2,
    column: 16,
  },
});


`;

exports[`macro with fabrics: with fabrics 1`] = `

import { status } from "patronum/status";
const $status = status({ effect });

      ↓ ↓ ↓ ↓ ↓ ↓

var _effectorFileName = '/macro.test.ts';
import { withFactory } from 'effector';
import { status } from 'patronum/status';
const $status = withFactory({
  sid: 'j4rpgh',
  fn: () =>
    status({
      effect,
    }),
  name: '$status',
  method: 'status',
  loc: {
    file: _effectorFileName,
    line: 2,
    column: 16,
  },
});


`;

exports[`macros import from root and rename import: import from root and rename import 1`] = `

import { status, debounce } from "./macro";
const $status = status({ effect });
const last = debounce({ source: wow, timeout: 10 });

      ↓ ↓ ↓ ↓ ↓ ↓

import { debounce as _debounce } from '@effector/patronum';
import { status as _status } from '@effector/patronum';
import { withFactory } from 'effector';
const $status = withFactory({
  sid: 'j4rpgh',
  fn: () =>
    _status({
      effect,
    }),
});
const last = withFactory({
  sid: '-flsuql',
  fn: () =>
    _debounce({
      source: wow,
      timeout: 10,
    }),
});


`;

exports[`macros import from root: import from root 1`] = `

import { status, debounce } from "./macro";
const $status = status({ effect });
const last = debounce({ source: wow, timeout: 10 });

      ↓ ↓ ↓ ↓ ↓ ↓

import { debounce as _debounce } from 'patronum';
import { status as _status } from 'patronum';
import { withFactory } from 'effector';
const $status = withFactory({
  sid: 'j4rpgh',
  fn: () =>
    _status({
      effect,
    }),
});
const last = withFactory({
  sid: '-flsuql',
  fn: () =>
    _debounce({
      source: wow,
      timeout: 10,
    }),
});


`;

exports[`macros renames import: renames import 1`] = `

import { status, debounce } from "./macro";
const $status = status({ effect });
const last = debounce({ source: wow, timeout: 10 });

      ↓ ↓ ↓ ↓ ↓ ↓

import { debounce as _debounce } from '@effector/patronum/debounce';
import { status as _status } from '@effector/patronum/status';
import { withFactory } from 'effector';
const $status = withFactory({
  sid: 'j4rpgh',
  fn: () =>
    _status({
      effect,
    }),
});
const last = withFactory({
  sid: '-flsuql',
  fn: () =>
    _debounce({
      source: wow,
      timeout: 10,
    }),
});


`;

exports[`macros with macro: with macro 1`] = `

import { status, debounce } from "./macro";
const $status = status({ effect });
const last = debounce({ source: wow, timeout: 10 });

      ↓ ↓ ↓ ↓ ↓ ↓

import { debounce as _debounce } from 'patronum/debounce';
import { status as _status } from 'patronum/status';
import { withFactory } from 'effector';
const $status = withFactory({
  sid: 'j4rpgh',
  fn: () =>
    _status({
      effect,
    }),
});
const last = withFactory({
  sid: '-flsuql',
  fn: () =>
    _debounce({
      source: wow,
      timeout: 10,
    }),
});


`;
